Feature/spring security 7.0 migrate (#26)
* update to jackson 3, Spring Security Spring Authorization Server 7.0.0, update test case, update jackson package names

* include netflix eurekca client

* add subtype

* update rest page

* remove springboot-4 from deploy.yml

* fix test case

---------

Co-authored-by: Sonam Samdupkhangsar <sonamsamdupkhangsar@Sonams-MacBook-Pro.local>